# gateway-api

./: .env.sample  .gitignore  README  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
backend/app/: 0-start-web-server.sh  1-start-celery-workers.sh  2-start-celery-registration-helpers.sh  3-start-celery-sheduled-tools.sh  5-start-flowers.sh  beat-start.sh  first-time-initialize-db.sh  flowers-start.sh  gunicorn_conf.py  prestart.sh  pyproject.toml  start-reload.sh  start.sh  worker-start.sh  workers-start.sh
backend/app/alembic/: README  env.py
backend/app/alembic/versions/: 04c5c21fa78a_modification_to_history_log_tables_3.py  089816220a8a_sense.py  12e88a28d270_new_type_for_preburn_tnx_status_bad.py  169f89947086_cascade_tasks_db_updated.py  1c268ae760ae_ew_tables_for_nft.py  2d2481e9079e_jsonb_instead_of_text_for_status_message.py  376d9eba0a8b_1_added_funding_address_to_user_and_api_.py  43eb58c6061f_cascade_tasks_db_updated.py  5524f5b8ea2f_collection_table.py  5714056d5e2b_cascade_tasks_db_updated.py  663ce8a6236b_cascade_tasks_db_updated.py  669a53466d02_cascade_tasks_db.py  6ad2ed9e8b81_added_new_column_make_publicly_.py  7611a2bdf505_cascade_tasks_db_updated.py  7677bfbbfe2b_cascade_tasks_db_updated.py  79f1b3288fdd_added_claimed_pastelids_table.py  7c043c1767f6_cascade_tasks_db_updated.py  828c83605fb0_cascade_tasks_db_updated.py  83ae5272ec84_added_balance_limit_column.py  92954cae939f_modification_to_history_log_tables_2.py  96bfb91e2587_added_new_tables_cascadehistory_and_.py  9b55ce385361_added_status_message_column.py  9d8e7e8cc856_updated_table_for_after_activation_.py  a4420003a0ed_cascade_tasks_db_updated.py  a515a7c316cc_cascade_tasks_db_updated.py  a9b62278abcf_modification_to_history_log_tables_1.py  ae39edefe692_changed_1_secret_id_to_string_and_2_.py  b0e6bfee6eef_cascade_tasks_db_updated.py  b2533f16d36d_balance_and_account_transactions.py  b2f7cb07d3fc_cascade_tasks_db_updated.py  b80d68ab8877_added_table_for_hash_to_pastel_ticket_.py  b8a7547c15f1_updated_table_for_nft.py  bb047a5187a3_updated_table_for_nft_nft_dd_file_ipfs_.py  bfa8318a8445_added_timestamp_column_to_claimed_.py  c9b9615c2c52_added_client_table_for_client_ids_and_.py  d5bebf95cc98_added_wallet_ai_uth_related_fields.py  e102e4c14bf0_preburn_fee_changed_to_float.py  e36d7436f379_renamed_columns_with_links_to_stored_.py  e63284ba92dc_cascade_tasks_db_updated.py  e661b0515902_cascade_tasks_db_updated.py  (+5 more)
backend/app/app/: OpenAPI_Invite_Codes.csv  backend_pre_start.py  celeryworker_pre_start.py  init_db_script.py  main.py
backend/app/app/api/: common.py  deps.py
backend/app/app/celery_tasks/: account_manager.py  base.py  cascade.py  collection.py  nft.py  pastel_tasks.py  registration_helpers.py  scheduled.py  sense.py  task_lock.py  tasks.py
backend/app/app/core/: celery_config.py  celery_utils.py  config.py  logging.py  security.py  status.py
backend/app/app/crud/: __init__.py  base.py  crud_api_key.py  crud_cascade.py  crud_client.py  crud_collection.py  crud_history_log.py  crud_nft.py  crud_preburn_tx.py  crud_reg_ticket.py  crud_sense.py  crud_user.py
backend/app/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/app/email-templates/: new_account.html
backend/app/app/models/: __init__.py  api_key.py  base_task.py  base_ticket.py  cascade.py  client.py  collection.py  history_log.py  nft.py  preburn_tx.py  psl_reg_ticket.py  sense.py  user.py
backend/app/app/schemas/: __init__.py  api_key.py  base_task.py  base_ticket.py  cascade.py  client.py  collection.py  history_log.py  nft.py  preburn_tx.py  reg_ticket.py  sense.py  user.py
backend/app/simple-setup/: docker-compose.yml
backend/app/tools/: file_maintenance.py  new_ipfs_test.py  readd2ipfs.sh
tools/: ipfs_links_testing.py  pyproject.toml  requests_test.py
(+104 files in other folders)
