[tool.poetry]
name = "openapi"
version = "0.1.0"
description = ""
authors = ["a-ok123 <alexey@pastel.network>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.81.0"}
celery = "^5.2.7"
flower = "^1.2.0"
httpx = "^0.23.0"
uvicorn = {version = "^0.17.6", extras = ["standard"]}
aiofiles = "^0.8.0"
SQLAlchemy = "^1.4.40"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
