[tool.poetry]
name = "psl-gateway"
version = "1.0.1"
description = ""
authors = ["a-ok123 <alexey@pastel.network>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.2"}
uvicorn = {version = "^0.22.0", extras = ["standard"]}
celery = "^5.2.7"
flower = "^2.0.0"
httpx = "^0.25.0"
aiofiles = "^23.1.0"
SQLAlchemy = "^1.4.40"
psycopg2-binary = "^2.9.5"
alembic = "^1.8.1"
tenacity = "^8.0.1"
pydantic = "^1.4"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
emails = "^0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
kombu = "^5.2.4"
redis = "^5.0.0"
ipfshttpclient = "^0.7.0"
zstd = "^1.5.4"
python-redis-cache = "^2.1.2"
redlock = "^1.2.0"
boto3 = "^1.26.92"
gunicorn = "^21.2.0"
pillow = "^10.0.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
